--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head> <meta charset="utf-8"/> <meta name="viewport" content="width=device-width, initial-scale=1"></head><body> <canvas id="canvas"></canvas> <div id="dialogue" class="speech"></div></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div id="main">
+        <canvas id="canvas"></canvas>
+    </div>
+</body>
+
+</html>
